# renquant-strategy-104

./: .gitignore  CLAUDE.md  Makefile  README.md  RENQUANT_REPOS.md  pyproject.toml  renquant_repo.yml
.github/workflows/: agent-attribution-check.yml  agent-autofix.yml  agent-cost-tracker.yml  agent-review.yml  ci.yml
configs/: patchtst_prod_artifact_manifest.json  strategy_config.golden.json  strategy_config.json  strategy_config.shadow.json  strategy_config.shadow_a.json  strategy_config.shadow_b.json  xgb_prod_artifact_manifest.json
doc/: strategy-map-pointers.json  strategy-map.md
doc/design/: 2026-06-29-cash-drag-raise-slots.md  2026-06-29-conviction-gate-demean-revert.md  2026-07-09-a0-veto-floor-calibration.md  2026-07-09-rotation-threshold-calibration.md  2026-07-10-admission-breadth-shadow-ab.md
doc/progress/: 2026-06-29-cash-drag-raise-slots.md  2026-07-01-per-ticker-retrain-timeout.md  2026-07-02-parking-sleeve-config-keys.md  2026-07-02-strategy-map.md  2026-07-03-intraday-decisioning-config-keys.md  2026-07-03-m6-fingerprint-flag-config-key.md  2026-07-04-s7-parking-sleeve.md  2026-07-05-s5-decision-ledger-enable.md  2026-07-09-a0-veto-floor-calibration-design.md  2026-07-09-deployment-governor-config-prepare.md  2026-07-09-one-share-floor-prepare.md  2026-07-09-rotation-threshold-calibration-design.md  2026-07-09-software-stops-config-prepare.md  2026-07-10-admission-breadth-shadow-ab.md  2026-07-10-shadow-ab-arm-configs.md  (+6 more)
tests/: test_config_drift.py  test_parking_sleeve.py  test_strategy_configs.py  test_strategy_map_pointers.py
(+4 files in other folders)
