[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renquant-strategy-104"
version = "0.3.0"
description = "Policy/config repository for RenQuant 104."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "renquant-common>=0.3,<0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../renquant-common/src"]
testpaths = ["tests"]
